# cpp-20s-experiments

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  awwy.ps1  build-debug-on-linux.sh  build-debug-on-windows.cmd  build-release-on-linux.sh  build-release-on-windows.cmd  summon-emacs.ps1
.github/workflows/: ci.yml
app/: hello_benchmark.cpp  main.cpp
black-magic-emacs-init/: .gitignore  init-config.org  init.el
black-magic-emacs-init/init-dired/: init-dired.org
build-release/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPP_20S_EXPERIMENTS.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cpp-20s-experiments.vcxproj  cpp-20s-experiments.vcxproj.filters
build-release/cpp-20s-experiments.dir/Release/: cpp-20s-experiments.exe.recipe  cpp-20s-experiments.iobj  cpp-20s-experiments.ipdb
build-release/cpp-20s-experiments.dir/Release/cpp-20s-.93F8BE36.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-release/src/EX2025_07_05-experiment-with-iterators/: EX2025_07_05-experiment-with-iterators.vcxproj  EX2025_07_05-experiment-with-iterators.vcxproj.filters  cmake_install.cmake
build-release/src/EX2025_07_05-experiment-with-iterators/EX2025_07_05-experiment-with-iterators.dir/Release/: EX2025_07_05-experiment-with-iterators.lib.recipe
build-release/src/EX2025_07_05-experiment-with-iterators/EX2025_07_05-experiment-with-iterators.dir/Release/EX2025_0.1E878F65.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  EX2025_07_05-experiment-with-iterators.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-release/tests/: cmake_install.cmake  unit_tests.vcxproj  unit_tests.vcxproj.filters
build-release/tests/unit_tests.dir/Release/: unit_tests.exe.recipe
build-release/tests/unit_tests.dir/Release/unit_tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  unit_tests.lastbuildstate
build-release/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-release/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
build-release/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/EX2025_07_05-experiment-with-iterators/: CMakeLists.txt  EX2025_07_05-experiment-with-iterators.cpp  EX2025_07_05-experiment-with-iterators.hpp
tests/: CMakeLists.txt
tests/EX2025_07_05-experiment-with-iterators/: EX2025_07_05-experiment-with-iterators-tests.cpp
